--- a/css/styles.css
+++ b/css/styles.css
@@ -334,6 +334,48 @@ button:hover {
 	flex-wrap: wrap;
 }
 
+.search-bar {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 15px;
+	margin: 20px;
+	padding: 0 16px;
+}
+  
+#search-input {
+	width: 250px;
+	padding: 8px 15px;
+	border: 2px solid var(--border-color);
+	border-radius: 4px;
+	font-size: 16px;
+	transition: all 0.3s ease;
+	outline: none;
+}
+
+#search-input:focus {
+border-color: var(--orange-color);
+}
+
+#genre-filter {
+	padding: 8px 10px;
+	border-radius: 4px;
+	border: 2px solid var(--border-color);
+	background-color: white;
+	font-size: 16px;
+	outline: none;
+	transition: all 0.3s ease;
+}
+
+#genre-filter:focus {
+	border-color: var(--orange-color);
+}
+
+#reset-button {
+	border-radius: 4px;
+	padding: 11px 20px;
+}
+
 /* Pagination */
 #pagination {
 	display: flex;
